# TravellerLogger

./: README.md  manage.py  planets_db.json  pyproject.toml  requirements.txt
TravellerLogger/: asgi.py  settings.py  urls.py  wsgi.py
marines/: admin.py  apps.py  models.py
marines/migrations/: 0001_initial.py  0002_alter_hireling_notes.py
planet_economy/: admin.py  apps.py  models.py  urls.py  views.py
planet_economy/migrations/: 0001_initial.py  0002_alter_planetware_purchase_price_and_more.py  0003_remove_planetware_purchase_or_sell_price_check_and_more.py
planet_economy/templates/: planet_details.html  planets.html
planets/: admin.py  forms.py  helper_functions.py  models.py  views.py
planets/migrations/: 0001_initial.py  0002_rename_planet_id_planet_planet_coords.py  0003_alter_ware_options_ware_base_price_ware_name_and_more.py  0004_mapsector.py  0005_planet_sector.py  0006_alter_ware_name.py
planets/templates/: base.html  footer.html  header.html  planet_details.html  planet_list.html
planets/templates/planets/: planet_detail.html  planet_list.html
space_calendar/: admin.py  apps.py  models.py
space_calendar/migrations/: 0001_initial.py
static/css/: base.css
static/js/: base.js
templates/: base.html  index.html  menu.html
travellerlogger/: asgi.py  settings.py  urls.py  wsgi.py
